adding footer commit

--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Calculator</title>
-        <link rel="stylesheet" href="CSS/style.css">
         <link rel="stylesheet" href="CSS/reset.css">
+        <link rel="stylesheet" href="CSS/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     </head>
@@ -35,6 +35,7 @@
             </div>
 
         </div>
+        <footer>Made by: <a href="https://github.com/fl-martin">fl-martin</a></footer>
         <script src="script.js"></script>
     </body>
 </html>
